fix align of drop down arrow in book your rooms bar (#1623)

--- a/src/targets/beacon/styles/components/inputs.less
+++ b/src/targets/beacon/styles/components/inputs.less
@@ -54,7 +54,7 @@ input {
 }
 .chosen-container-single .chosen-single div b {
   background: none;
-  top: 5px;
+  top: 10px;
   right: -10px;
   width: 27px;
   height: 27px;
